@@ -27,6 +27,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #21172: isinstance check relaxed from dict to collections.Mapping.
+
 - Issue #21155: asyncio.EventLoop.create_unix_server() now raises a ValueError
   if path and sock are specified at the same time.
 
